# aoc-2025-perf

./: .gitignore  Cargo.toml  README.md
data/: day_09.txt
lib/day_01/: mod.rs  part_1.rs  part_2.rs
lib/day_02/: day_02_p1.md  mod.rs  part_1.rs  part_2.rs
lib/day_03/: part_1.rs  part_2.rs
lib/day_04/: part_1.rs  part_2.rs
lib/day_05/: part_1.rs  part_2.rs
lib/day_06/: part_1.rs  part_2.rs
lib/day_07/: part_1.rs  part_2.rs
lib/day_08/: part_1.rs  part_2.rs
lib/day_09/: part_1.rs  part_2.rs
lib/day_10/: part_1.rs  part_2.rs
lib/day_11/: part_1.rs  part_2.rs
lib/day_12/: part_1.rs
