# cargo-features = ["profile-rustflags"]
[package]
name = "aoc-2025-perf"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = 2
debug-assertions = false
overflow-checks = false
strip = "none"
# rustflags = ["-Cforce-frame-pointers=yes"]
lto = false


[dependencies]
good_lp = { version = "1.14.2", default-features = false, features = [
    "minilp",
] }
rustc-hash = "2.1.1"

[[bin]]
name = "bench"
path = "bin/bench.rs"
target-cpu = "native"

[lib]
name = "aoc_2025_perf_lib"
path = "lib/lib.rs"


[[bin]]
name = "day_01_p1"
path = "bin/day_01/day_01_p1.rs"
target-cpu = "native"

[[bin]]
name = "day_01_p2"
path = "bin/day_01/day_01_p2.rs"
target-cpu = "native"

[[bin]]
name = "day_02_p1"
path = "bin/day_02/day_02_p1.rs"
target-cpu = "native"

[[bin]]
name = "day_02_p2"
path = "bin/day_02/day_02_p2.rs"
target-cpu = "native"

[[bin]]
name = "day_03_p1"
path = "bin/day_03/day_03_p1.rs"
target-cpu = "native"

[[bin]]
name = "day_03_p2"
path = "bin/day_03/day_03_p2.rs"
target-cpu = "native"

[[bin]]
name = "day_04_p1"
path = "bin/day_04/day_04_p1.rs"
target-cpu = "native"

[[bin]]
name = "day_04_p2"
path = "bin/day_04/day_04_p2.rs"
target-cpu = "native"

[[bin]]
name = "day_05_p1"
path = "bin/day_05/day_05_p1.rs"
target-cpu = "native"

[[bin]]
name = "day_05_p2"
path = "bin/day_05/day_05_p2.rs"
target-cpu = "native"

[[bin]]
name = "day_06_p1"
path = "bin/day_06/day_06_p1.rs"
target-cpu = "native"

[[bin]]
name = "day_06_p2"
path = "bin/day_06/day_06_p2.rs"
target-cpu = "native"

[[bin]]
name = "day_07_p1"
path = "bin/day_07/day_07_p1.rs"
target-cpu = "native"

[[bin]]
name = "day_07_p2"
path = "bin/day_07/day_07_p2.rs"
target-cpu = "native"

[[bin]]
name = "day_08_p1"
path = "bin/day_08/day_08_p1.rs"
target-cpu = "native"

[[bin]]
name = "day_08_p2"
path = "bin/day_08/day_08_p2.rs"
target-cpu = "native"

[[bin]]
name = "day_09_p1"
path = "bin/day_09/day_09_p1.rs"
target-cpu = "native"

[[bin]]
name = "day_09_p2"
path = "bin/day_09/day_09_p2.rs"
target-cpu = "native"

[[bin]]
name = "day_10_p1"
path = "bin/day_10/day_10_p1.rs"
target-cpu = "native"

[[bin]]
name = "day_10_p2"
path = "bin/day_10/day_10_p2.rs"
target-cpu = "native"

[[bin]]
name = "day_11_p1"
path = "bin/day_11/day_11_p1.rs"
target-cpu = "native"

[[bin]]
name = "day_11_p2"
path = "bin/day_11/day_11_p2.rs"
target-cpu = "native"
